currency-conversion-service/currency-conversion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-conversion-service
  labels:
    app: currency-conversion-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency-conversion-service
  template:
    metadata:
      labels:
        app: currency-conversion-service
    spec:
      containers:
        - name: currency-conversion-service
          image: currency-conversion-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3335
