currency-conversion-service/currency-conversion-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-conversion-service
spec:
  selector:
    app: currency-conversion-service
  ports:
    - protocol: TCP
      port: 3335
      targetPort: 3335
  type: NodePort
