currency-conversion-service/currency-conversion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: currency-conversion-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: <your-ec2-public-ip>.nip.io  # Ganti dengan IP EC2 Anda
      http:
        paths:
          - path: /convert
            pathType: Prefix
            backend:
              service:
                name: currency-conversion-service
                port:
                  number: 3335
